openvscode/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvscode-service
spec:
  selector:
    app: openvscode
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
