openvscode/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvscode-ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openvscode-service
            port:
              number: 80
